Changed images in site and fixed some alignment issues in game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,15 @@ body {
 
 /*Styling for the welcome message using username*/
 #welcomeText {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: 800;
     /*margin-left: 10px;*/
     font-family: 'Shadows Into Light', cursive;
     text-align: center;
     display: block;
     margin-left: auto;
-    margin-right: auto;   
+    margin-right: auto; 
+    padding: 15px;  
 }
 
 /*If dark mode is chosen the colour scheme of the webpage changes*/
